# gpt-from-scratch-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: args.rs  bigram_language_model.rs  char_set_transcoder.rs  dataset.rs  main.rs  sampling.rs  self_attention_examples.rs  simple_bigram_language_model.rs
